--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bienvenido</title>
+
+	<link rel="stylesheet" href="index.css">
 </head>
 <body>
 
+	<div class="contenedor"></div>
+
+	<!-- Definir el contenedor como un cuadrado que mida 50px por cada lado, con un borde de 4 pixeles de grosor y color del mismo borde en verde. El color de relleno del cuadro será rojo. -->
 	
 </body>
 </html>
