--- a/dos.html
+++ b/dos.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>javier benitez</title>
+	<link rel="stylesheet" href="dos.css">
 </head>
 <body>
-	
+	<div class="contenedor">hola mundo</div>
 </body>
 </html>
