--- a/1.html
+++ b/1.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Willcommen</title>
+	<link rel="stylesheet" href="1.css">
 </head>
 <body>
-	
+	<div class="contenedor"></div>
 </body>
 </html>
